# pasta-sos

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
lib/: debootstrap_handler.py  lxc_handler.py  util.py
lib/lib/: util.py
pasta_sos/: config_handler.py  debootstrap_handler.py  exceptions.py  launchpad_handler.py  lxc_handler.py  sosreport_handler.py  ssh_handler.py  util.py  uvt_kvm_handler.py
pasta_sos/lib/: README.md
pasta_sos/lib/se-support-reproducer-templates/: README.md
pasta_sos/lib/se-support-reproducer-templates/active-directory/: README.md  ad-profile.yaml  setup.sh
pasta_sos/lib/se-support-reproducer-templates/ad-sssd/: README.md  build.sh  sssd-client.tmpl  sssd-server.tmpl
pasta_sos/lib/se-support-reproducer-templates/byoca/: README.md  byoca.sh  openssl-ca.cnf  openssl-inter.cnf
pasta_sos/lib/se-support-reproducer-templates/landscape/: README.md  lds.yaml
pasta_sos/lib/se-support-reproducer-templates/maas/: README.md  automaas_postgres.yaml  automaas_ppa.yaml  automaas_snap.yaml  maas-images-mirror.yaml
pasta_sos/lib/se-support-reproducer-templates/microk8s/: k8s.yaml
