[tool.poetry]
name = "pasta-sos"
version = "0.2.0"
description = "Create a virtual machine from a sosreport, for troubleshooting. https://github.com/pjmattingly/pasta-sos"
authors = ["Peter Mattingly <peter.mattingly@canonical.com>"]
readme = "README.md"
packages = [{include = "pasta_sos"}]

[tool.poetry.dependencies]
python = "^3.10"
shortuuid = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
