[tool.poetry]
name = "pasta-sos"
version = "0.1.0"
description = ""
authors = ["Peter Mattingly <peter.mattingly@canonical.com>"]
readme = "README.md"
packages = [{include = "pasta_sos"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
